Update a few notebooks

--- a/note/assign_halo_mass.ipynb
+++ b/note/assign_halo_mass.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,8 +64,8 @@
      "text": [
       "# Running model: asap_test_final_6\n",
       "#    Will use emcee as sampler ...\n",
-      "#    Use   256 walkers with    snooker moves for   200 x  3 steps of burn-in\n",
-      "#    Use   256 walkers with        kde moves for  9000 steps of sampling\n",
+      "#    Use   256 walkers with     strech moves for   200 x  3 steps of burn-in\n",
+      "#    Use   256 walkers with    stretch moves for  9000 steps of sampling\n",
       "\n",
       "# Observations:\n",
       "# Galaxy catalog: s16a_wide2_massive_fsps1_imgsub_use_short.fits\n",
@@ -89,7 +80,7 @@
       "# UniverseMachine:\n",
       "# Galaxy catalog : um_smdpl_insitu_exsitu_0.7124_basic_logmp_11.5_short.npy\n",
       "# DSigma results : um_smdpl_insitu_exsitu_0.7124_basic_logmp_11.5_50m_r_0.08_50_22bins.npy\n",
-      "# Volumn of the simulation:    205348196.23 Mpc^3\n",
+      "# Volumn of the simulation:    186588921.28 Mpc^3\n",
       "# Halo mass : logmh_host\n",
       "# Stellar mass : logms_tot\n",
       "# There are 12 DSigma profiles in this sample\n",
@@ -106,7 +97,7 @@
       "\n",
       "# Best parameters:  [ 5.88796924e-01  1.18440965e+01 -5.44728085e-02 -2.66064930e-03\n",
       "  6.66594803e-01 -1.84079224e-01  3.71320620e-01]\n",
-      "# ln(Likelihood) for SMFs   : 207.4367\n",
+      "# ln(Likelihood) for SMFs   : 186.0899\n",
       "# ln(Likelihood) for DSigma : -339.4669\n",
       "\n",
       " [ 5.88796924e-01  1.18440965e+01 -5.44728085e-02 -2.66064930e-03\n",
@@ -116,20 +107,20 @@
    ],
    "source": [
     "test_dir = '../model/'\n",
-    "model_str = 'final_6'\n",
+    "model_str = 'final_default'\n",
     "\n",
     "# The configuration file\n",
-    "config_file = os.path.join(test_dir, 'asap_test_%s.yaml' % model_str)\n",
+    "config_file = os.path.join(test_dir, 'asap_%s.yaml' % model_str)\n",
     "\n",
     "# The results of the final sampling process\n",
-    "result_file = os.path.join(test_dir, 'asap_test_%s_sample.npz' % model_str)\n",
+    "result_file = os.path.join(test_dir, 'asap_%s_sample.npz' % model_str)\n",
     "\n",
     "# Initialize the model, load the data\n",
     "cfg, params, obs_data, um_data = fitting.initial_model(config_file, verbose=True)\n",
     "\n",
     "# Load in the final sampling results\n",
     "(mod_result_samples, \n",
-    " mod_result_chains, \n",
+    " mod_result_chains,\n",
     " mod_result_lnprob, \n",
     " mod_result_best, _, _) = io.load_npz_results(result_file)\n",
     "\n",
@@ -1037,9 +1028,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
