--- a/note/convergency.ipynb
+++ b/note/convergency.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: AstropyDeprecationWarning: astropy.extern.six will be removed in 4.0, use the six module directly if it is still needed [astropy.extern.six]\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +91,7 @@
       "# UniverseMachine:\n",
       "# Galaxy catalog : um_smdpl_insitu_exsitu_0.7124_basic_logmp_11.5_short.npy\n",
       "# DSigma results : um_smdpl_insitu_exsitu_0.7124_basic_logmp_11.5_50m_r_0.08_50_22bins.npy\n",
-      "# Volumn of the simulation:    205348196.23 Mpc^3\n",
+      "# Volumn of the simulation:    186588921.28 Mpc^3\n",
       "# Halo mass : logmh_host\n",
       "# Stellar mass : logms_tot\n",
       "# There are 12 DSigma profiles in this sample\n",
@@ -126,7 +127,7 @@
     "# Load in the final sampling results\n",
     "(mod_result_samples, \n",
     " mod_result_chains, \n",
-    " mod_result_lnprob, \n",
+    " mod_result_lnprob,\n",
     " mod_result_best, _, _) = io.load_npz_results(result_file)\n",
     "\n",
     "# The results from the 3-stage burn-in results\n",
@@ -163,7 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = mod_result_best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +183,7 @@
       "\n",
       "# Best parameters:  [ 5.88796924e-01  1.18440965e+01 -5.44728085e-02 -2.66064930e-03\n",
       "  6.66594803e-01 -1.84079224e-01  3.71320620e-01]\n",
-      "# ln(Likelihood) for SMFs   : 207.4367\n",
+      "# ln(Likelihood) for SMFs   : 186.0899\n",
       "# ln(Likelihood) for DSigma : -339.4669\n"
      ]
     }
@@ -181,7 +191,7 @@
    "source": [
     "# Predict the stellar mass in inner and outer apertures\n",
     "logms_inn, logms_tot, sig_logms, mask_use = predict_mstar_basic(\n",
-    "    um_data['um_mock'], mod_result_best, min_logms=10.5,\n",
+    "    um_data['um_mock'], parameters, min_logms=10.5,\n",
     "    logmh_col=cfg['um']['logmh_col'], min_scatter=cfg['um']['min_scatter'],\n",
     "    pivot=cfg['um']['pivot_logmh'])\n",
     "\n",
@@ -534,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
